# realtime-asd

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
asd/: __init__.py  active_speaker_utils.py  buffers.py  lip_landmark_wrapper.py  lip_motion_analyzer.py  model_wrapper.py  ros_audio.py  tracking.py  yolo_wrapper.py
config/: asd_config.py
docs/: ROADMAP.md
models/: README.md
nodes/: realtime_asd_node_parallel.py  realtime_asd_node_sdk_entry.py
scripts/: benchmark_yolo_runtime.py  check_in_container.sh  entrypoint.sh  fix_gstreamer.sh  install_python_deps.sh  refresh_local_packages.sh  run_node.sh  save_base_image.sh  setup_ros_network.sh
sdk/: README.md  pyproject.toml
sdk/asd_sdk/: __init__.py  engine.py  fusion.py  selector.py  types.py
tools/: build_source_av_video.py  export_talknet_onnx.py  record_ros_av.py  render_asd_overlay_video.py  run_offline_asd_dataset.py
visualization/: __init__.py  asd_visualizer.py
