[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asd-sdk"
version = "0.1.0"
description = "Active speaker detection SDK (algorithm-only, no detector)"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "ASD Team" }]
dependencies = [
  "numpy>=1.22",
]

[project.optional-dependencies]
runtime = [
  "torchaudio>=2.0",
  "opencv-python>=4.5",
  "torch>=2.0",
  "pandas>=1.3",
  "tqdm>=4.60",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["asd_sdk*"]
